syntax="proto3";

message MessageDto {

  int64 longData = 1;
  
}