syntax="proto3";

message TestDto {

  int32 y = 1;
  int32 x = 2;
  int64 userId = 3;
  
}